# CCMS

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
certificate/: asgi.py  settings.py  urls.py  wsgi.py
web_app/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
web_app/migrations/: 0001_initial.py  0002_alter_certificate_issued_date.py  0002_alter_certificate_registration_number.py  0002_alter_certificate_user.py  0003_alter_certificate_issued_date.py  0003_certificate_exam_board.py  0004_alter_certificate_issued_date.py  0004_user_institute_address_alter_certificate_issued_date.py  0005_alter_certificate_issued_date.py  0005_remove_user_institute_address_and_more.py  0006_user_alter_certificate_issued_date.py
web_app/static/css/: styles.css
web_app/templates/: base.html  edit_profile.html  image.html  index.html  landing.html  login.html  profile.html  search.html
web_app/utils/: util.py
web_app/views/: authentication_views.py  certificate_views.py
